@@ -236,6 +236,8 @@ New Features
 * SOLR-9947: Clean up some SolrInfoMBean categories. Add an alternative hierarchical view in JMX
   for SolrInfoMBeans, which uses similar conventions to SolrJmxReporter. (ab)
 
+* SOLR-10763: Admin UI replication tab sometimes empty when failed replications (janhoy, Bojan Vitnik)
+
 Optimizations
 ----------------------
 * SOLR-9704: Facet Module / JSON Facet API: Optimize blockChildren facets that have
